@startuml
'https://plantuml.com/sequence-diagram

class SanPham{
    -String p_ID;
    -String p_Name;
    -int p_Count;
    -float p_Price;
    +SanPham(String p_ID, String p_Name, double p_Price, int p_Count)
    +String getP_ID()
    +void setP_ID()
    +String getP_Name()
    +void setP_Name()
    +double getP_Price()
    +void setP_Price()
    +int getP_Count()
    +void setP_Count()
}

class DataAccess{
    -{static} DataAccess instance
    -List<SanPham> ds_SanPham
    #DataAccess()
    +{static} DataAccess getInstance()
    +void Add_P(SanPham sp);
    +void Delete_P(String p_ID);
    +void Update_p(SanPham sp);
    +List<SanPham> getDs_SanPham()
}

class UI{
    -DataAccess
    +UI()
    +void Add_P(SanPham sp)
    +void Delete_P(String p_ID)
    +void Update_p(SanPham sp)
    +void Display()
}

class DataAccessType1 extends DataAccess{
    -{static} DataAccessType1 instance
    #DataAccessType1()
    +{static} DataAccessType1 getInstance()
}


class DataAccessType2 extends DataAccess{
    -{static} DataAccessType2 instance
    #DataAccessType2()
    +{static} DataAccessType2 getInstance()
}

UI --> DataAccess
UI --> SanPham

@enduml